--- a/잠재공간에서의 판별자연구/1130_잠재 공간 탐색_ 판별자 스코어 활용.md
+++ b/잠재공간에서의 판별자연구/1130_잠재 공간 탐색_ 판별자 스코어 활용.md
@@ -10,9 +10,9 @@
 
 현대 딥러닝 기반 생성 모델링(Generative Modeling)은 고차원 픽셀 공간(Pixel Space) $\\mathcal{X}$의 복잡성을 극복하기 위해 데이터를 저차원의 잠재 공간(Latent Space) $\\mathcal{Z}$로 압축하고 매핑하는 전략을 취해왔다. 이러한 접근의 기저에는 \*\*매니폴드 가설(Manifold Hypothesis)\*\*이 자리 잡고 있다. 이 가설은 고차원 데이터 $x$가 전체 공간에 균일하게 분포하는 것이 아니라, 데이터의 본질적 자유도에 해당하는 저차원의 특정 영역(Manifold)에 좁게 밀집해 있다는 이론이다.1 변분 오토인코더(VAE)나 적대적 오토인코더(AAE)와 같은 모델들은 훈련 데이터가 존재하는 이 매니폴드의 위상(Topology)을 잠재 공간 상의 연속적인 확률 분포로 근사하려 시도한다.1
 
-그러나 비지도 학습(Unsupervised Learning) 환경에서 학습된 잠재 공간은 수학적 이상(Ideal)과 달리 완벽하게 연속적이거나 조밀(Compact)하지 않다. 데이터 분포의 복잡성으로 인해 잠재 공간에는 인코더가 학습하지 않은 저밀도 영역(Low Density Region), 즉 \*\*'매니폴드의 구멍(Holes)'\*\*이 필연적으로 존재하게 된다. 생성 모델은 데이터가 존재하는 영역에 대해서는 유효한 생성을 보장하지만, 데이터가 부재한 영역에 대해서는 어떠한 보장도 할 수 없다.1
+그러나 비지도 학습(Unsupervised Learning) 환경에서 학습된 잠재 공간은 수학적 이상(Ideal)과 달리 완벽하게 연속적이거나 조밀(Compact)하지 않다.[이론적으로 가정한 사전 분포와 인코더의 사후 분포 사이에 괴리가 존재함.] 데이터 분포의 복잡성으로 인해 잠재 공간에는 인코더가 학습하지 않은 저밀도 영역(Low Density Region), 즉 \*\*'매니폴드의 구멍(Holes)'\*\*이 필연적으로 존재하게 된다.[데이터가 무한하더라도 클래스 간의 경계(아티팩트)는 존재함.] 생성 모델은 데이터가 존재하는 영역에 대해서는 유효한 생성을 보장하지만, 데이터가 부재한 영역에 대해서는 어떠한 보장도 할 수 없다.1
 
-이러한 구조적 한계는 사용자가 잠재 공간을 탐색(Navigation)하거나 보간(Interpolation)할 때 치명적인 문제로 드러난다. 가장 보편적으로 사용되는 선형 보간(Linear Interpolation, $z\_{new} \= \\alpha z\_A \+ (1-\\alpha)z\_B$)은 두 지점 사이의 유클리드 최단 거리를 가정한다. 그러나 이는 잠재 공간의 확률적 분포나 리만 기하학(Riemannian Geometry)적 구조를 전혀 고려하지 않은 '순진한(Naive)' 접근이다. 탐색 경로가 인코더가 학습하지 않은 저밀도 영역을 가로지를 때, 디코더는 학습되지 않은 입력 $z$를 받아 예측 불가능한 결과물(Garbage or Noise)을 생성하거나, 의미론적으로 전혀 연결되지 않는 급격한 변화를 출력하게 된다. 이는 마치 지형의 높낮이나 안전성을 고려하지 않고 지도상의 두 점을 직선으로 연결하여 걷다가 절벽(저밀도 영역)으로 떨어지는 탐험가의 상황과 유사하다.
+이러한 구조적 한계는 사용자가 잠재 공간을 탐색(Navigation)하거나 보간(Interpolation)할 때 치명적인 문제로 드러난다. 가장 보편적으로 사용되는 선형 보간(Linear Interpolation, $z\_{new} \= \\alpha z\_A \+ (1-\\alpha)z\_B$)은 두 지점 사이의 유클리드 최단 거리를 가정한다. 그러나 이는 잠재 공간의 확률적 분포나 리만 기하학(Riemannian Geometry)적 구조를 전혀 고려하지 않은 '순진한(Naive)' 접근이다.[그럼에도 단순 선형보간의 결과는 유의미함. 이를 학습된 잠재공간의 정규화가 휘어진 매니폴드를 유클리드(선형적인)한 매니폴드로 만들었기 때문(1), 디코더가 연속함수이기 때문에 실제 데이터 위치가 아니더라도 일반화가 가능함(2).] 탐색 경로가 인코더가 학습하지 않은 저밀도 영역을 가로지를 때, 디코더는 학습되지 않은 입력 $z$를 받아 예측 불가능한 결과물(Garbage or Noise)을 생성하거나, 의미론적으로 전혀 연결되지 않는 급격한 변화를 출력하게 된다. 이는 마치 지형의 높낮이나 안전성을 고려하지 않고 지도상의 두 점을 직선으로 연결하여 걷다가 절벽(저밀도 영역)으로 떨어지는 탐험가의 상황과 유사하다.
 
 ### **1.2 문제의 재정의: 통계적 유효성의 상실과 회복**
 
