--- a/잠재공간에서의 판별자연구/1130_잠재 공간 탐색_ 판별자 스코어 활용.md
+++ b/잠재공간에서의 판별자연구/1130_잠재 공간 탐색_ 판별자 스코어 활용.md
@@ -18,7 +18,8 @@
 
 ### **1.2 문제의 재정의: 통계적 유효성의 상실과 회복**
 
-기존 연구들은 이러한 문제를 해결하기 위해 구면 보간(Slerp)을 도입하거나, 리만 계량(Riemannian Metric)을 학습하여 측지선(Geodesic)을 찾으려는 기하학적 시도를 해왔다. 그러나 이러한 접근은 계산 비용이 높을 뿐만 아니라, 모델이 학습한 데이터의 '통계적 밀도(Density)'를 실시간으로 반영하는 데에는 한계가 있다. 진정한 의미의 안전한 탐색은 기하학적 최단 거리가 아니라, **탐색 경로 상의 모든 점이 모델이 학습한 '유효한 확률 분포(Valid Probability Distribution)' 내에 존재함**을 통계적으로 보장하는 것이다.
+기존 연구들은 이러한 문제를 해결하기 위해 구면 보간(Slerp)을 도입하거나, 리만 계량(Riemannian Metric)을 학습하여 측지선(Geodesic)을 찾으려는 기하학적 시도를 해왔다.[리만 측지선은 디코더 함수의 곡면을 따라가는 최단 경로일 뿐, 그 선이 데이터가 밀집된 영역 위에 있다는 보장은 없음.]
+그러나 이러한 접근은 계산 비용이 높을 뿐만 아니라, 모델이 학습한 데이터의 '통계적 밀도(Density)'를 실시간으로 반영하는 데에는 한계가 있다. 진정한 의미의 안전한 탐색은 기하학적 최단 거리가 아니라, **탐색 경로 상의 모든 점이 모델이 학습한 '유효한 확률 분포(Valid Probability Distribution)' 내에 존재함**을 통계적으로 보장하는 것이다.
 
 따라서 본 연구 보고서는 다음과 같은 핵심 질문에 대한 해답을 제시한다.  
 "잠재 공간을 여행하는 동안, 현재의 위치가 모델이 학습한 '유효한 영역(Valid Region)'인지 아니면 '미지의 영역(Out-of-Distribution)'인지를 실시간으로 판별하고, 경로를 안전한 곳으로 유도할 수 있는 나침반은 무엇인가?"  
