--- a/잠재공간에서의 판별자연구/1130_잠재 공간 탐색_ 판별자 스코어 활용.md
+++ b/잠재공간에서의 판별자연구/1130_잠재 공간 탐색_ 판별자 스코어 활용.md
@@ -51,7 +51,7 @@ $$D^\*(z) \= \\frac{p(z)}{p(z) \+ q(z)}$$
 이 식은 판별자의 출력이 단순한 분류기가 아님을 시사한다. 이를 오즈(Odds) 형태로 변형하면 그 의미가 더욱 명확해진다.
 
 $$\\frac{D^\*(z)}{1 \- D^\*(z)} \= \\frac{p(z)}{q(z)}$$  
-즉, 최적화된 판별자의 출력값 $D(z)$는 \*\*현재 위치 $z$에서의 사전 분포 $p(z)$와 데이터 분포 $q(z)$ 간의 밀도 비율(Density Ratio)\*\*을 나타내는 연속적인 스코어(Score)가 된다. 이는 판별자가 잠재 공간의 각 지점에서 "이 위치가 통계적으로 얼마나 유효한가"를 나타내는 **밀도계(Densimeter)** 역할을 수행할 수 있음을 의미한다.
+즉, 최적화된 판별자의 출력값 $D(z)$는 \*\*현재 위치 $z$에서의 사전 분포 $p(z)$와 데이터 분포 $q(z)$ 간의 밀도 비율(Density Ratio)\*\*을 나타내는 연속적인 스코어(Score)가 된다. 이는 판별자가 잠재 공간의 각 지점에서 "이 위치가 통계적으로 얼마나 유효한가"를 나타내는 **밀도계(Densimeter)** 역할을 수행할 수 있음을 의미한다. []
 
 ### **2.3 평형 상태 $D(z) \= 0.5$의 재정의: 헷갈림의 밀도 (Density of Confusion)**
 
