--- a/잠재공간에서의 판별자연구/1130(2)_잠재 공간 탐색 방법론 정립.md
+++ b/잠재공간에서의 판별자연구/1130(2)_잠재 공간 탐색 방법론 정립.md
@@ -75,12 +75,12 @@ $$D^\*(z) \= \\frac{p(z)}{p(z) \+ p(z)} \= 0.5$$
 ### **4.1 알고리즘의 구성**
 
 1. 이동 (Proposal):  
-   현재 위치 $z\_t$에서 목표 지점을 향해 선형적인 이동을 시도한다. 예를 들어, 구면 선형 보간(SLERP)을 사용하여 다음 후보 지점 $z'{t+1}$을 계산한다.  
-   $$z'{t+1} \= \\text{SLERP}(z\_t, z\_{target}, \\Delta t)$$  
+   현재 위치 $z\_t$에서 목표 지점을 향해 선형적인 이동을 시도한다. 예를 들어, 구면 선형 보간(SLERP)을 사용하여 다음 후보 지점 $z'\_{t+1}$을 계산한다.  
+   $$z'\_{t+1} \= \\text{SLERP}(z\_t, z\_{target}, \\Delta t)$$  
    이 단계는 기하학적인 방향성을 제시하지만, 통계적인 유효성은 보장하지 않는다.  
 2. 평가 (Evaluation):  
-   후보 지점 $z'{t+1}$의 유효성을 판별자 $D$를 통해 검사한다.  
-   $$Score \= D(z'{t+1})$$  
+   후보 지점 $z'\_{t+1}$의 유효성을 판별자 $D$를 통해 검사한다.  
+   $$Score \= D(z'\_{t+1})$$  
    만약 $|Score \- 0.5| \< \\epsilon$ (임계값)이라면, 해당 지점은 유효하므로 $z\_{t+1} \\leftarrow z'\_{t+1}$로 확정하고 다음 단계로 넘어간다.  
 3. 교정 (Correction):  
    만약 $Score$가 0.5에서 크게 벗어난다면, 이는 경로가 구멍이나 이상치 영역으로 진입했음을 의미한다. 우리는 $z$를 $D(z)=0.5$인 평형 상태로 복귀시키기 위해 판별자의 그라디언트를 이용한다. 목표 함수를 $L(z) \= (D(z) \- 0.5)^2$로 정의하고, 이를 최소화하는 방향으로 $z$를 업데이트한다.
